istiofiles/virtual-service-recommendation-virtualized.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  creationTimestamp: null
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - match:
    - sourceLabels:
        app: preference
        version: v2
    route:
    - destination:
        host: recommendation
        subset: version-virtualized
  - route:
    - destination:
        host: recommendation
        subset: version-v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: recommendation
  namespace: tutorial
spec:
  host: recommendation
  subsets:
  - labels:
      version: virtualized
    name: version-virtualized
  - labels:
      version: v1
    name: version-v1
